/*
 * $Id: ChangeLog,v 1.4848 2006/03/03 00:08:31 guerra000 Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-03-03 03:30 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * source/rtl/hbfind.c
    ! Fixed invalid handle error in Windows when file() fails
      (detected by AQTime profiler)

2006-03-02 18:06 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * contrib/libnf/mouse.c
    + Added missing _m_BUTREL() function.

2006-03-02 14:33 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * xharbour/hrbdll.bc
    * add missing reference for sixcdx

2006-03-01 21:15 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/dbinfo.ch
  * xharbour/source/rdd/workarea.c
    * added DBI_SCOPEDRELATION action. It alow to test if given
      relation on current work area sets scope on child index.
      F.e.: dbInfo( DBI_SCOPEDRELATION, 1 )

2006-03-01 20:40 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbapicdp.h
  * xharbour/source/rtl/cdpapi.c
    * added optional BOOL parameter to functions which translate to UTF8
      to not translate control code characters

  * xharbour/source/rtl/gtsln/gtsln.c
  * xharbour/source/rtl/gtxwc/gtxwc.c
    * update for new parameter in UTF8 functions

2006-03-01 16:40 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * harbour/source/rtl/cdpapi.c
  * harbour/source/rtl/gtxwc/gtxwc.c
    ! fixed UTF8 trnalsations

2006-03-01 14:00 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/Makefile
    * added missing gfxtrans.ch

  * xharbour/include/hbdefs.h
  * xharbour/source/compiler/genc.c
    * minor modification in some harbour func name definitions

  * xharbour/include/hbexprb.c
    ! fixed typo

  * xharbour/source/rtl/cdpapi.c